--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2019-06-11  Nick Clifton  <nickc@redhat.com>
+
+	Import these changes from the binutils/gdb repository:
+
+	2019-05-28  Nick Alcock  <nick.alcock@oracle.com>
+
+	* Makefile.def (dependencies): configure-libctf depends on all-bfd
+	and all its deps.
+	* Makefile.in: Regenerated.
+
+	2019-05-28  Nick Alcock  <nick.alcock@oracle.com>
+
+	* Makefile.def (host_modules): Add libctf.
+	* Makefile.def (dependencies): Likewise.
+	libctf depends on zlib, libiberty, and bfd.
+	* Makefile.in: Regenerated.
+	* configure.ac (host_libs): Add libctf.
+	* configure: Regenerated.
+
 2017-07-04  Release Manager
 
 	* GCC 6.4.0 released.
